[tool.poetry]
name = "unitem-task"
version = "0.1.0"
description = ""
authors = ["Tomasz Sobieszek <tom.sobieszek@gmail.com>"]
readme = "README.md"
packages = [{include = "unitem_task"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
scipy = "^1.9.3"
singleton-decorator = "^1.0.0"

[tool.poetry.group.test.dependencies]
mypy = "^0.991"
pyflakes = "^3.0.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
